fixed alignment of selector for testimonials

--- a/style.css
+++ b/style.css
@@ -105,11 +105,12 @@ header {
     width: 40%;
     margin: auto;
     background-color: rgba(25, 115, 45, .50);
-    padding: 8px;
+    padding: 12px;
 }
 
 .reviewer {
     font-style: italic;
+    padding: 5px;
 }
 
 .selector {
@@ -132,6 +133,8 @@ header {
 .selectorContainer {
     width: 30%;
     margin: auto;
+    display: flex;
+    justify-content: center;
 }
 
 .lipariFamilyImageContainer {
